--- a/popup.html
+++ b/popup.html
@@ -3,6 +3,8 @@
     <head>
         <title>Budget Manager</title>
         <meta charset="UTF-8">
+        <script src="jquery-3.2.1.min.js" ></script>
+        <script src="popup.js"></script>
     </head>
     <body>
         <h1>Budget Manager</h1>
